# cargo-dist

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/cli/: builder.rs  cli.rs  installer.rs  mod.rs
src/cli/commands/: dist.rs  help.rs  install.rs  mod.rs
src/commands/: help.rs  mod.rs
src/util/: command_prelude.rs  error.rs  mod.rs
