[package]
name = "cargo-dist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
clap = "4.2.0"
# deserialize the configuration file.
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

# rust-installer
installer = { path = "rust-installer" }